adding a new string for customizing the bottom navigation bar color

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Birinci rəng</string>
     <string name="foreground_color">Önplan rəngi</string>
     <string name="app_icon_color">Tətbiq ikonu rəngi</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Standarta qaytar</string>
     <string name="change_color">Rəngi dəyiş</string>
     <string name="theme">Mövzu</string>
