--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Color principal</string>
     <string name="foreground_color">Color de primer pla</string>
     <string name="app_icon_color">Color de la icona d\'aplicació</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Valors per defecte</string>
     <string name="change_color">Canviar de color</string>
     <string name="theme">Tema</string>
