--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Primäre Farbe</string>
     <string name="foreground_color">Vordergrundfarbe</string>
     <string name="app_icon_color">App-Icon-Farbe</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Standard wiederherstellen</string>
     <string name="change_color">Farbe ändern</string>
     <string name="theme">Thema</string>
