--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Color principal</string>
     <string name="foreground_color">Color de primer plano</string>
     <string name="app_icon_color">Color del icono de la aplicación</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Valores por defecto</string>
     <string name="change_color">Cambiar de color</string>
     <string name="theme">Tema</string>
