--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Ensisijainen väri</string>
     <string name="foreground_color">Etualan väri</string>
     <string name="app_icon_color">Sovelluksen ikonin väri</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Palauta oletukset</string>
     <string name="change_color">Change color</string>
     <string name="theme">Teema</string>
