--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Couleur primaire</string>
     <string name="foreground_color">Couleur d\'arrière-plan</string>
     <string name="app_icon_color">Couleur d\'arrière-plan de l\'icône de l\'application</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Restaurer les valeurs par défaut</string>
     <string name="change_color">Modifier la couleur</string>
     <string name="theme">Thème</string>
