--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -169,6 +169,7 @@
     <string name="primary_color">Primarna boja</string>
     <string name="foreground_color">Boja pozadine</string>
     <string name="app_icon_color">Boja ikone aplikacije</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Vrati zadano</string>
     <string name="change_color">Promijeni boju</string>
     <string name="theme">Tema</string>
