--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Elsődleges szín</string>
     <string name="foreground_color">Előtér szín</string>
     <string name="app_icon_color">Alkalmazás ikon színe</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Alapértelmezések visszaállítása</string>
     <string name="change_color">Szín változtatása</string>
     <string name="theme">Téma</string>
