--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Warna primer</string>
     <string name="foreground_color">Warna latar depan</string>
     <string name="app_icon_color">Warna ikon aplikasi</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Kembalikan ke default</string>
     <string name="change_color">Ubah warna</string>
     <string name="theme">Tema</string>
