--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Colore primario</string>
     <string name="foreground_color">Colore in primo piano</string>
     <string name="app_icon_color">Colore icona app</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Ripristina predefiniti</string>
     <string name="change_color">Cambia colore</string>
     <string name="theme">Tema</string>
