--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">メインカラー</string>
     <string name="foreground_color">前景色</string>
     <string name="app_icon_color">アプリアイコンの色</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">デフォルトに戻す</string>
     <string name="change_color">色を変更</string>
     <string name="theme">テーマ</string>
