--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Pirminė spalva</string>
     <string name="foreground_color">Priekinio plano spalva</string>
     <string name="app_icon_color">Programėlės ikonėlės spalva</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Atstatyti</string>
     <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
