--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Primærfarge</string>
     <string name="foreground_color">Forgrunnsfarge</string>
     <string name="app_icon_color">Farge for app-ikon</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Gjenopprett standard</string>
     <string name="change_color">Endre farge</string>
     <string name="theme">Tema</string>
