--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -167,6 +167,7 @@
     <string name="primary_color">Belka i przełączniki</string>
     <string name="foreground_color">Pierwszy plan</string>
     <string name="app_icon_color">Ikona aplikacji</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Przywróć domyślne</string>
     <string name="change_color">Zmień kolor</string>
     <string name="theme">Motyw</string>
