--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Cor primária</string>
     <string name="foreground_color">Cor secundária</string>
     <string name="app_icon_color">Cor do ícone da aplicação</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Restaurar predefinições</string>
     <string name="change_color">Alterar cor</string>
     <string name="theme">Tema</string>
