--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -169,6 +169,7 @@
     <string name="primary_color">Основной цвет</string>
     <string name="foreground_color">Цвет переднего плана</string>
     <string name="app_icon_color">Цвет значка приложения</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Сбросить к стандартным</string>
     <string name="change_color">Изменить цвет</string>
     <string name="theme">Тема</string>
