--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -169,6 +169,7 @@
     <string name="primary_color">Primárna farba</string>
     <string name="foreground_color">Farba popredia</string>
     <string name="app_icon_color">Farba spúšťacej ikonky apky</string>
+    <string name="bottom_navigation_bar_color">Farba spodnej navigačnej lišty</string>
     <string name="restore_defaults">Obnoviť predvolené</string>
     <string name="change_color">Zmeniť farbu</string>
     <string name="theme">Téma</string>
