--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -171,6 +171,7 @@
     <string name="primary_color">Primarna barva</string>
     <string name="foreground_color">Barva ospredja</string>
     <string name="app_icon_color">Barva ikone aplikacije</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Ponastavi na privzeto</string>
     <string name="change_color">Spremeni barvo</string>
     <string name="theme">Tema</string>
