--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Primär färg</string>
     <string name="foreground_color">Förgrundsfärg</string>
     <string name="app_icon_color">Appikonens färg</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Återställ standardfärger</string>
     <string name="change_color">Ändra färg</string>
     <string name="theme">Tema</string>
