--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Ana renk</string>
     <string name="foreground_color">Ön plan rengi</string>
     <string name="app_icon_color">Uygulama simgesi rengi</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Varsayılanları geri yükle</string>
     <string name="change_color">Rengi değiştir</string>
     <string name="theme">Tema</string>
