--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">主體顏色</string>
     <string name="foreground_color">前景顏色</string>
     <string name="app_icon_color">應用程式圖標顏色</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">恢復預設</string>
     <string name="change_color">改變顏色</string>
     <string name="theme">主題</string>
