--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Primární barva</string>
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Obnovit výchozí</string>
     <string name="change_color">Change color</string>
     <string name="theme">Motiv</string>
