--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">Primær farve</string>
     <string name="foreground_color">Forgrundsfarve</string>
     <string name="app_icon_color">Farve til appens ikon</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Gendan standarder</string>
     <string name="change_color">Skift farve</string>
     <string name="theme">Udseende</string>
