--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -166,6 +166,7 @@
     <string name="primary_color">주요 색상(테마)</string>
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
+    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">기본설정으로 변경</string>
     <string name="change_color">Change color</string>
     <string name="theme">테마</string>
