--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -166,7 +166,7 @@
     <string name="primary_color">Primaire kleur</string>
     <string name="foreground_color">Kleur voorgrond</string>
     <string name="app_icon_color">Kleur app-icoon</string>
-    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
+    <string name="bottom_navigation_bar_color">Kleur navigatiebalk onder aan het scherm</string>
     <string name="restore_defaults">Standaardwaarden</string>
     <string name="change_color">Kleur veranderen</string>
     <string name="theme">Thema</string>
