--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -436,6 +436,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Harap pilih folder awal perangkat OTG di layar berikutnya untuk memberi akses</string>
     <string name="wrong_root_selected_otg">Folder salah, harap pilih folder awal perangkat OTG</string>
 
